Fix layout of hero in landing page
content of hero were not aligned correctly, so changed flex layout

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
@@ -14,12 +18,13 @@ button {
     background-color: #3882f6;
     color: #f9faf8;
     padding: 10px 24px;
+    border: none;
     border-radius: 8px;
 }
 
 img {
     display: flex;
-    width: 300px;
+    width: 500px;
     height: auto;
 }
 
@@ -42,6 +47,21 @@ img {
     display: flex;
     font-size: 24px;
     font-weight: bold;
+}
+
+.hero-content {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 48px;
+}
+
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 500px;
+    gap: 24px;
 }
 
 .hero-title {
